ckanext/mapactiontheme/public/mapactiontheme.css
/* CSS for the whole site */

body {
    background-color: #676767;
    max-width: 950px;
    margin: 0 auto;
}

.masthead {
    background: #2f2776;
    background-image: url("header-bg.png");
    background-repeat: no-repeat;
}

.masthead .nav-collapse {
    padding-top: 32px;
}


 

@media (max-width: 767px) {
  body {
    padding-left: 0px;
    padding-right: 0px;
  }
  .toolbar .breadcrumb, .toolbar .breadcrumb a {
    color: #505050 !important;
  }
  .toolbar .breadcrumb .home {
    display: initial;
  }

}


@media (max-width: 979px) {
    .masthead .nav-collapse {
        padding-top: 0px;
    }
}

.masthead .site-search input {
    width: 260px;
}

.toolbar {
    padding: 0px;
    margin-bottom: 4px;
}

.toolbar .breadcrumb {
    font-family: arial,verdana,helvetica,sans-serif;
    color: #333;
    margin-left: 20px;
    line-height: 30px;
    font-size: 12.5px;
    background: #ffffff;
}

/* Turn off the hamburger that appears on small screens*/
.navbar .btn-navbar {
    display: none;
}

.span6 {
    padding-left: 20px;
}

[role="main"] {
    background: #ffffff;
    padding-top: 0px;
}

.wrapper {
    border: 0;
    box-shadow: none;
}

.site-footer {
    background-color: #e3e4ec;
    color: #000000;
    min-height: 0px;
    padding: 0px;
    font-size: 10px;
    line-height: 10px;
    padding-top: 5px;
}

.site-footer .span4 {
    float: right;
}

.site-footer a {
    color: #000000;
}

.attribution {
    text-align: right;
}


.dataset-list-thumbnail {
    clear: left;
    float: left;
    padding-right: 20px;
}

IMG.dataset-thumbnail {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.dataset-item {
    clear: left;
    overflow: auto;
}

.dataset-content-inner {
    overflow: hidden;
}

/* Home page */

.catalog-title {
    margin-left: 0px;
    clear: both;
    background: #ffffff;
    padding: 10px 20px 20px 20px;
}

.catalog-title h1 {
    float: left;
}

.featured-actions {
    float: right;
    margin-right: 20px;
}

.simple-event-list {
    margin-top: 30px;
}

ul.simple-event-list {
    list-style: none;
}

.simple-event-list li {
    float: left;
    width: 45%;
    margin-right: 5%;
    min-width: 200px;
}

.simple-event-list li a {
    font-size: 20px;
    font-weight: bold;
    line-height: 2em;
}

.simple-event-list p {
    font-size: 14px;
}

/* Package and Group read pages */

.group-read .span9 {
    float: none;
    margin-left: 10px;
}

.package-read .page-header, .group-read .page-header {
    background: none;
    border-bottom: none;
}

.group-read .nav-tabs {
    display: none;
}



#home_dataset_list {
    margin-top: 30px;
}

.dataset-heading a, .resource-item .heading {
    color: #3c60ad;
}


.resource-item .heading:hover {
    color: #263e76;
}


.btn{
    color: #fff;
    text-shadow: 0 1px 1px #333;
    background-color: #3c60ad;
    Background-image: none;
    Border: none;
}

.btn-primary {
    color: #100b00;
    background-color: #fcb127;
    text-shadow: 0 1px 1px #fdd488;
    Background-image: none;
    Border: none;
}

.btn:hover {
    color: #fff;
    background-color: #263e76;
    text-shadow: 0 1px 1px #333;
    Background-image: none;
    Border: none;
}

.btn a:hover {
    text-decoration: none;
}

.btn-primary:hover {
    color: #100b00;
    background-color: #ed9b03;
    text-shadow: 0 1px 1px #fcb127;
    Background-image: none;
    Border: none;
}

.btn-group.open .btn-primary.dropdown-toggle {
    background-color: #ed9b03;
    color: #333;
}

.dropdown-menu>li>a:hover {
    background-color: #263e76;
    background-image: None;
}

.btn-primary .caret {
    border-top-color: #333;
    border-bottom-color: #333;
}

.list-item-btn {
    position: absolute;
    right: 10px;
    top: 14px;
    width: 6.5em;
    text-align: left;
}

a {
    color: #3c60ad;
}

a:hover {
    color: #263e76;
}

.module-narrow .nav-item>a:hover {
    color: #333;
}

.nav-item.active>a {
    background-color: #3c60ad;
}

.nav-item.active>a:hover {
    background-color: #263e76;
    color: #fff;
}

.nav-item.active>a:before {
    background-image: url("nav-active-2.png");
}

.nav-item.active>a:hover:before {
    background-image: url("nav-active-roll-2.png");
}

.mapaction-feed {
    float:left;
    clear:both;
}

.login-container {
    margin-top:2em;
}

#g-signin-button {
    width:auto;
}

.pagination {
    clear:both;
}

.old-version {
    font-size:150%;
}

